examples/test/testpolicy7208.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7208
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key11: value44
      key25: value21
      key49: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value25
          key49: value12
      podSelector:
        matchLabels:
          key40: value31
          key3: value20
          key16: value7
